<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/backSpaceImageViewId"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_backspace"
            app:tint="@color/colorPrimary"
            android:layout_gravity="start"
            android:contentDescription="@string/app_name"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_account"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18sp"
                />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            >

            <LinearLayout
                android:id="@+id/layoutSignupUserNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/bankground_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_account"
                    app:tint="@color/colorAccent"
                    />
                <EditText
                    android:id="@+id/editTextSignUpUserNameId"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/shahidul_deowan"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="18sp"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="41dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="-40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/layoutSignUpEmailID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/bankground_input"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_email_24"
                    app:tint="@color/colorAccent"
                    />
                <EditText
                    android:id="@+id/editTextSignUpEmailTextID"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/you_email_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="41dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"

                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="-40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/layoutSignUpPhoneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/bankground_input"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_phone_android"
                    app:tint="@color/colorAccent" />

                <EditText
                    android:id="@+id/editTextSignUpPhoneId"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/_8801400000000"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="18sp"

                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="41dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="-40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/layoutSignUpPasswordId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/bankground_input"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_email_24"
                    app:tint="@color/colorAccent"
                    />

                <EditText
                    android:id="@+id/signUpPasswordEditTextID"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/star_password"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="18sp"
                    tools:ignore="TextFields"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="41dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="-40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:id="@+id/layoutConfirmPasswordId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/bankground_input"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_baseline_email_24"
                    app:tint="@color/colorAccent" />

                <EditText
                    android:id="@+id/EditTextConfirmSignUpPasswordId"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@null"
                    android:hint="@string/star_password"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="numberPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="18sp"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="41dp"
                android:background="@color/colorWhite"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:text="@string/confirm_password"
                android:textAllCaps="true"
                android:textColor="@color/colorTextSecondary"
                android:textStyle="bold" />

        </RelativeLayout>

        <Button
            android:id="@+id/signUpButtonId"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/create_account"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/button_background"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextSecondary"
                    />
                <TextView
                    android:id="@+id/signUpSignInId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"

                    />


        </LinearLayout>

    </LinearLayout>


</ScrollView>